samples/_failures_safe/1761493443_a3d6f3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9cf71893.c: In function ‘main’:
./samples/SAFE/__tmp_9cf71893.c:153:9: error: expected declaration or statement at end of input
  153 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_9cf71893.c:153:9: error: expected declaration or statement at end of input
